# gLLM

./: .gitignore  DEV_GUIDE.md  README.md  docker-compose.mock.yaml  docker-compose.models.yaml  docker-compose.yaml
Data/: .gitignore  compose.yaml  (+2 more)
src/: .env.example  .gitignore  app.py  chainlit-app.py  chainlit.md  pyproject.toml  server.py
src/.chainlit/: config.toml
src/.deepeval/: .deepeval_telemetry.txt
src/AuthHandler/: AuthHandler.py
src/Chainlit/: app.py
src/Chainlit/public/: theme.json
src/Data/: __init__.py  database.py  models.py  user.py
src/Data/alembic/: env.py
src/Data/alembic/versions/: 28125649e364_add_firstname_lastname_email_to_user_.py  71edb0951243_add_user_roles_pswrd.py  d6ff8424b62c_init_db.py
src/PromptManager/: PromptManager.py  __init__.py
src/Prompts/: System.txt
src/RAG_utils/: ingestion.py  retrieval.py
src/Routers/: AdminRouter.py  AuthRouter.py
src/Services/: AdminService.py  AuthService.py  PromptService.py
src/Services/AuthService/: AuthService.py
src/Services/PromptService/: PromptService.py  __init__.py
src/core/: config.py
src/db/: database.py
src/models/: auth.py  finetune.py  user.py
src/ragutils/: ingestion.py  retrieval.py
src/routers/: adminrouter.py  authrouter.py  docsrouter.py  finetunerouter.py
src/schema/: __init__.py  models.py
src/schema/alembic/: env.py
src/services/: adminservice.py  authservice.py  containerservice.py  finetuneservice.py  promptservice.py
src/services/ragutils/: ingestion.py  retrieval.py  vector_db.py
src/tools/: __init__.py  core_tools.py
(+38 files in other folders)
