[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.41.3",
    "chainlit>=2.9.0",
    "langchain-milvus>=0.3.0",
    "openai>=2.7.1",
]

[dependency-groups]
dev = [
    "deepeval>=3.7.2",
    "groq>=0.36.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "python-dotenv>=1.2.1",
]

[tool.pytest.ini_options]
minversion = "6.0"
# -rA: Show a summary of All tests (passed/failed) at the end
# -vv: Very Verbose (shows exact values compared in assertions)
# --tb=short: Traceback Short (only shows the line that failed, not the whole stack)
addopts = "-rA -vv --tb=short"

testpaths = ["../tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "live: marks tests that require the running vLLM container",
]