[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "boto3>=1.42.39",
    "chainlit==2.9.6",
    "fastapi[standard]>=0.121.3",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-milvus>=0.3.0",
    "langchain-openai>=1.1.7",
    "openai>=2.7.1",
]
